force-app/main/default/staticresources/python/Disappear/src/objects/Deadline__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Ability to add a comment against that particular Meeting’s Deadline Date/Type so that the users are aware of the change while Sylogent is working on updating the information on their side.</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeadLine_Type__c</fullName>
        <description>Different type of deadLine</description>
        <label>DeadLine Type</label>
        <picklist>
            <picklistValues>
                <fullName>2nd yr fellow Abst. Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Notifications Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Withdrawal Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstracts Available On-Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstracts and Programs Mailed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance Registration Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call For Abstracts Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Symposia Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Abstract Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Program Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Registration Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Breaker Submission Opens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Abstract Deadline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Deadline Online Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Deadline Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abstract Deadline Late Breaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary Program Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Deadlines</relationshipLabel>
        <relationshipName>Deadlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Deadline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Meeting__c</columns>
        <columns>Date__c</columns>
        <columns>DeadLine_Type__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Deadline Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deadlines</pluralLabel>
    <recordTypes>
        <fullName>MeetingDeadline</fullName>
        <active>true</active>
        <label>Meeting Deadline</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>